rustdocs/errors/rust-bitcoin-bitcoin-src-address-error.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/address/error.rs:3:5
  |
3 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/address/error.rs:4:5
  |
4 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/address/error.rs:6:5
  |
6 | use internals::write_err;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `crate::address`
 --> ../rust-bitcoin/bitcoin/src/address/error.rs:8:12
  |
8 | use crate::address::{Address, NetworkUnchecked};
  |            ^^^^^^^ use of unresolved module or unlinked crate `address`
  |
help: you might be missing a crate named `address`, add it to your project and import it in your code
  |
3 + extern crate address;
  |

error[E0432]: unresolved import `crate::prelude`
 --> ../rust-bitcoin/bitcoin/src/address/error.rs:9:12
  |
9 | use crate::prelude::String;
  |            ^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/address/error.rs:10:12
   |
10 | use crate::script::{witness_program, witness_version};
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
 3 + extern crate script;
   |

error[E0432]: unresolved import `crate::Network`
  --> ../rust-bitcoin/bitcoin/src/address/error.rs:11:5
   |
11 | use crate::Network;
   |     ^^^^^^^^^^^^^^ no `Network` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bech32`
   --> ../rust-bitcoin/bitcoin/src/address/error.rs:218:40
    |
218 | pub struct ParseBech32Error(pub(crate) bech32::segwit::DecodeError);
    |                                        ^^^^^^ use of unresolved module or unlinked crate `bech32`
    |
    = help: you might be missing a crate named `bech32`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `base58`
   --> ../rust-bitcoin/bitcoin/src/address/error.rs:240:17
    |
240 |     ParseBase58(base58::Error),
    |                 ^^^^^^ use of unresolved module or unlinked crate `base58`
    |
    = help: you might be missing a crate named `base58`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `base58`
   --> ../rust-bitcoin/bitcoin/src/address/error.rs:277:11
    |
277 | impl From<base58::Error> for Base58Error {
    |           ^^^^^^ use of unresolved module or unlinked crate `base58`
    |
    = help: you might be missing a crate named `base58`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `base58`
   --> ../rust-bitcoin/bitcoin/src/address/error.rs:278:16
    |
278 |     fn from(e: base58::Error) -> Self { Self::ParseBase58(e) }
    |                ^^^^^^ use of unresolved module or unlinked crate `base58`
    |
    = help: you might be missing a crate named `base58`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
